--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -65,6 +65,10 @@
                 <input type="file" id="fileInput" class="hidden" accept="image/*">
                 <div id="imagePreview" class="hidden">
                     <img src="" alt="Preview" class="shadow">
+                    <button id="clearImageBtn" 
+                            class="mt-2 px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600 focus:outline-none">
+                        Clear Image
+                    </button>
                 </div>
                 <p class="text-gray-600">Drop an image here or click to upload</p>
             </div>
